2012-10-03  Jeff Timanus  <twiz@chromium.org>

        [chromium] Expose settings value to conditionally enable pinch-zoom scaling in the Chromium compositor.  The
        flag defaults to disabled, so this change should be a no-op for scaling/scrolling behaviour.
        https://bugs.webkit.org/show_bug.cgi?id=93292

        Reviewed by James Robinson.

        * chromium/public/WebCompositor.h:
        (WebCompositor):
        * chromium/public/WebCompositorSupport.h:
        (WebKit::WebCompositorSupport::setPageScalePinchZoomEnabled):

2012-10-03  Harald Alvestrand  <hta@google.com>

        Add data passing to the GetStats interface of RTCPeerConnection
        https://bugs.webkit.org/show_bug.cgi?id=98003

        Reviewed by Adam Barth.

        * Platform.gypi:
        * chromium/public/WebRTCStatsRequest.h:
        (WebKit):
        (WebRTCStatsRequest):
        * chromium/public/WebRTCStatsResponse.h: Added.
        (WebCore):
        (WebKit):
        (WebRTCStatsResponse):
        (WebKit::WebRTCStatsResponse::WebRTCStatsResponse):
        (WebKit::WebRTCStatsResponse::~WebRTCStatsResponse):
        (WebKit::WebRTCStatsResponse::operator=):

2012-10-02  Terry Anderson  <tdanderson@chromium.org>

        [chromium] Add field to WebRenderingStats to track if we have impl-thread scrolled
        https://bugs.webkit.org/show_bug.cgi?id=97919

        Reviewed by James Robinson.

        Add two new members |numImplThreadScrolls| and |numMainThreadScrolls| to track
        the total number of times we have impl-thread scrolled and main-thread scrolled,
        respectively.

        * chromium/public/WebRenderingStats.h:
        (WebRenderingStats):
        (WebKit::WebRenderingStats::WebRenderingStats):
        (WebKit::WebRenderingStats::enumerateFields):

2012-09-28  Harald Tveit Alvestrand  <harald@alvestrand.no>

        Implement the GetStats interface on PeerConnection
        https://bugs.webkit.org/show_bug.cgi?id=95193
