@@ -1,3 +1,15 @@
+2012-10-03  Glenn Hartmann  <hartmanng@chromium.org>
+
+        Adding total pixels painted and rasterized stats.
+        https://bugs.webkit.org/show_bug.cgi?id=98269
+
+        Reviewed by James Robinson.
+
+        * chromium/public/WebRenderingStats.h:
+        (WebRenderingStats):
+        (WebKit::WebRenderingStats::WebRenderingStats):
+        (WebKit::WebRenderingStats::enumerateFields):
+
 2012-10-03  Jeff Timanus  <twiz@chromium.org>
 
         [chromium] Expose settings value to conditionally enable pinch-zoom scaling in the Chromium compositor.  The
